# pairsdb

./: ProjectHome.md  README
pairsdb/input/: cath.fasta  cath.hierarchy  ncbi.fasta  nrdb.table  pdbfinder.fasta  refseq.fasta  scop.fasta  swiss.fasta  trembl.fasta  wormpep.fasta
pairsdb/src/: Cath.py  Experiment.py  FastaIterator.py  IndexedFasta.py  Interpro.py  NrdbAnnotations.py  Pdb.py  SaryFasta.py  Scop.py  Short.pm  Taxonomy.py  Tools.py  align_pairs.py  bias_parser.pl  biasdb.pl  check_requirements.py  fasta2nrdb.py  map_alignments.py  mask_parser.pl  mask_sequences.py  nrdb2rsdb.py  psiblastparser.pl  rsdb_create.py  run_short.pl  testRsdb.py  tmhmm_parser.pl
pairsdblib/: .cproject  .project  AUTHORS  Makefile.am  NEWS  README  THANKS  acinclude.m4  config.h.in  configure.in  pairsdb_tables.ods
pairsdblib/doc/: Makefile.am  Makefile.in
pairsdblib/interfaces/: Makefile.am  Makefile.in
pairsdblib/interfaces/python/: Makefile.am  Makefile.in
pairsdblib/m4/: Makefile.in  ac_python_devel.m4  ax_boost_python.m4
pairsdblib/pairsdblib/: Connection.cpp  Connection.h  HelpersAlignandum.cpp  HelpersAlignandum.h  HelpersAlignatum.cpp  HelpersAlignatum.h  HelpersAlignment.cpp  HelpersAlignment.h  HelpersMultipleAlignment.cpp  HelpersMultipleAlignment.h  ImplAlignatumDomain.cpp  ImplAlignatumDomain.h  ImplAlignatumGroupie.cpp  ImplAlignatumGroupie.h  ImplAlignatumNeighbour.cpp  ImplAlignatumNeighbour.h  ImplAlignatumNid.cpp  ImplAlignatumNid.h  ImplAlignatumRadar.cpp  ImplAlignatumRadar.h  Makefile.am  PairsdblibDebug.cpp  PairsdblibDebug.h  PairsdblibException.cpp  PairsdblibException.h  Query.cpp  Query.h  Row.cpp  Row.h  SQLQueries.cpp  SQLQueries.h  pairsdblib.h  pairsdblib_functions.h  pairsdblib_fwd.h  pairsdblib_interfaces.h  pairsdblib_types.h
pairsdblib/python/: Makefile.am  build.py  build.py.in  exposed_decl.pypp.txt  includes.h  pairsdblib.cpp  setup.py  setup.py.in
pairsdblib/python/modules/: exposed_decl.pypp.txt  pairsdblib.main.cpp  pairsdblib_free_functions.pypp.cpp  pairsdblib_free_functions.pypp.hpp  vector_less__long_int__greater_.pypp.cpp  vector_less__long_int__greater_.pypp.hpp  vector_less__std_scope_pair_less_int_comma__int_greater___greater_.pypp.cpp  vector_less__std_scope_pair_less_int_comma__int_greater___greater_.pypp.hpp
pairsdblib/python/tests/: test.ini  test_HelpersMultipleAlignment.py
pairsdblib/src/: Makefile.am  align_groupies.cpp  get_conservation.cpp  get_mali.cpp  rsdb_create.cpp  rsdb_filter.cpp  rsdb_index.cpp
pairsdblib/tests/: Makefile.am  Makefile.in  test_Connection.cpp  test_FillAlignata.cpp  test_FillProfile.cpp  test_MultipleAlignment.cpp  test_Query.cpp  test_Sequence.cpp  test_tools.h
pairsdblib/tests/data/: README  test_rsdb_create.sh
