# Copyright (C) 2000 Andreas Heger <heger@ebi.ac.uk>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

#
# Making releases:
#   PAIRSDBLIB_MICRO_VERSION += 1;
#   PAIRSDBLIB_INTERFACE_AGE += 1;
#   PAIRSDBLIB_BINARY_AGE += 1;
# if any functions have been added, set PAIRSDBLIB_INTERFACE_AGE to 0.
# if backwards compatibility has been broken,
# set PAIRSDBLIB_BINARY_AGE _and_ PAIRSDBLIB_INTERFACE_AGE to 0.
#

AC_INIT([pairsdblib],[0.3.2])
 
PAIRSDBLIB_MAJOR_VERSION=0
PAIRSDBLIB_MINOR_VERSION=3
PAIRSDBLIB_MICRO_VERSION=2
PAIRSDBLIB_INTERFACE_AGE=0
PAIRSDBLIB_BINARY_AGE=0            

PAIRSDBLIB_VERSION=$PAIRSDBLIB_MAJOR_VERSION.$PAIRSDBLIB_MINOR_VERSION.$PAIRSDBLIB_MICRO_VERSION 

VERSION=$PAIRSDBLIB_VERSION

# get host information
AC_CANONICAL_TARGET
 
AC_SUBST(PAIRSDBLIB_MAJOR_VERSION)
AC_SUBST(PAIRSDBLIB_MINOR_VERSION)
AC_SUBST(PAIRSDBLIB_MICRO_VERSION)
AC_SUBST(PAIRSDBLIB_INTERFACE_AGE)
AC_SUBST(PAIRSDBLIB_BINARY_AGE)
AC_SUBST(PAIRSDBLIB_VERSION) 
AC_SUBST(VERSION)

AM_INIT_AUTOMAKE([pairsdblib],$VERSION)

AC_CONFIG_HEADER([config.h])

# check for tools
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL

# use new tar for long filenames
AM_INIT_AUTOMAKE([1.9 tar-ustar])
  
## include custom macros
AC_CONFIG_MACRO_DIR([m4])

AX_LIB_MYSQL([5.0])
AX_BOOST_BASE([1.34.0])
# AX_BOOST_UNIT_TEST_FRAMEWORK
AX_BOOST_PROGRAM_OPTIONS
AX_BOOST_PYTHON

# AC_CHECK_MYSQL_DB(DBNAME, [pairsdb] )

AC_PROG_LIBTOOL  

adl_ENABLE_HTML_DOC()

AC_PACKAGE_ALIGNLIB()

# check for doxygen, needed for building html documentation of c++ code
AC_PATH_PROG(DOXYGEN, doxygen )
AC_PATH_PROG(HAPPYDOC, happydoc )     
adl_ENABLE_DEBUG()

AC_CONFIG_FILES([Makefile
		 m4/Makefile 
		 pairsdblib/Makefile
		 src/Makefile 
		 tests/Makefile
		 python/Makefile
		 python/build.py
		 python/setup.py ])

AC_OUTPUT
     
dnl bindir and libdir twice for evaluation
eval bindir="$bindir"
eval bindir="$bindir"
eval libdir="$libdir"
eval libdir="$libdir"
eval datadir="$datadir"
eval mandir="$mandir"
eval infodir="$infodir"
eval htmldir="$htmldir"

echo "
$PACKAGE configuration
--------------------
target			 : $target
 
binary install path      : $bindir
library install path	 : $libdir
data install path	 	 : $datadir
manual page install path : $mandir
info manual install path : $infodir
html doc install path    : $htmldir
 
compiler                 : $CC

All flags             
  CXXFLAGS               : $CXXFLAGS $MORE_WARNINGS_CXXFLAGS $MYSQL_CFLAGS
  LIBS                   : $LDFLAGS $LIBS $MYSQL_LDFLAGS 

Flags for alignlib       
  CFLAGS                 : $ALIGNLIB_CFLAGS
  LIBS                   : $ALIGNLIB_LIBS

Flags for mysql          
  CFLAGS                 : $MYSQL_CFLAGS
  LDFLAGS                : $MYSQL_LDFLAGS

"





